# CONVERSE

./: .gitignore  README.md  config.yaml  environment.yaml  main.py  pyproject.toml
notebooks/: visualize_results.ipynb
results/: results_aids.csv  results_aids_20260220_153639.csv  results_aids_20260220_153639_detailed.csv  results_breast_cancer.csv  results_breast_cancer_20260220_131200.csv  results_breast_cancer_20260220_131200_detailed.csv  results_gbsg.csv  results_gbsg_20260220_152823.csv  results_gbsg_20260220_152823_detailed.csv  results_metabric.csv  results_metabric_20260220_203756.csv  results_metabric_20260220_203756_detailed.csv  results_pbc.csv  results_pbc_20260220_131200.csv  results_pbc_20260220_131200_detailed.csv  results_tcga_brca.csv  results_tcga_brca_20260220_153639.csv  results_tcga_brca_20260220_153639_detailed.csv  results_veterans.csv  results_veterans_20260220_131200.csv  results_veterans_20260220_131200_detailed.csv  results_whas.csv  results_whas_20260220_153639.csv  results_whas_20260220_153639_detailed.csv
saved_models/: aids_converse_siamese_seed42.joblib  breast_cancer_converse_single_seed42.joblib  gbsg_converse_single_seed42.joblib  metabric_converse_single_seed42.joblib  pbc_converse_single_seed42.joblib  tcga_brca_converse_siamese_seed42.joblib  veterans_converse_single_seed42.joblib  whas_converse_siamese_seed42.joblib
spaces/: aft.yaml  converse_siamese.yaml  converse_single.yaml  coxph.yaml  dcm.yaml  deephit.yaml  deepsurv.yaml  dvcsurv.yaml  pchazard.yaml  sca.yaml  survival_forest.yaml  vadesc.yaml  xgbcox.yaml
(+34 files in other folders)
